# phoenix-core

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: dashboard_data_flow.md  project_state_config.md
examples/: phoenix_core.toml
src/phoenix_core/: __init__.py  cli.py  command_resolution.py  config.py  dashboard.py  execution_planning.py  loader.py  pks.py  plugins.py  repositories.py  status.py
tests/: test_cli.py  test_command_resolution.py  test_core_config.py  test_core_config_toml.py  test_dashboard.py  test_execution_planning.py  test_office_integration.py  test_pks.py  test_plugin_loader.py  test_plugin_registry.py  test_repositories.py  test_status.py
