[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-core"
version = "0.1.0"
description = "Shared platform core for the Phoenix AI Platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "phoenix-office @ git+https://github.com/Phoenix-AI-Platform/phoenix-office.git",
    "phoenix-sdk @ git+https://github.com/Phoenix-AI-Platform/phoenix-sdk.git",
]

[project.scripts]
phoenix-core = "phoenix_core.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
