[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-core"
version = "0.1.0"
description = "Shared platform core for the Phoenix AI Platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "phoenix-office @ git+https://github.com/Phoenix-AI-Platform/phoenix-office.git@d53f640f92d763d8908cc7a20e4743936d94a4b5",
    "phoenix-sdk @ git+https://github.com/Phoenix-AI-Platform/phoenix-sdk.git@972770eb68d51a4f476bb03d67b1dab56f5b8b5c",
]

[project.scripts]
phoenix-core = "phoenix_core.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
